# QDock

./: LICENSE  README.md
Molecular_Docking/Example_run_of_QDOCK/: convert_qdock_to_terms.py  pyproject.toml  requirements-dev.txt  run_fam.py
Molecular_Docking/Example_run_of_QDOCK/src/QDock/grid_point_mapping/: __init__.py  qdock.py
Molecular_Docking/Example_run_of_QDOCK/workdir_fam/1y6r_Qubo/: QUBO_1y6R_Pyomo_SCIP.ipynb  QUBO_matrix.txt
Molecular_Docking/Example_run_of_QDOCK/workdir_fam/1y6r_Qubo/converted_qubo/: variable_mapping.txt
Molecular_Docking/Example_run_of_QDOCK/workdir_fam/qdock_output/Matches/: 1y6r_ligand_match.npy
Molecular_Docking/Example_run_of_QDOCK/workdir_fam/qdock_output/pocs/: rigidReceptor.glg  rigidReceptor.maps.fld
Molecular_Docking/QDOCK/: README.md
Molecular_Docking/QDOCK/src/QDock/: __init__.py
Molecular_Docking/QDOCK/src/QDock/feature_atom_mapping/: __init__.py  famligand.py  qdock.py
Molecular_Docking/QDOCK/workdir_fam/1y6r_Qubo_Analysis/: QUBO_1y6R_Pyomo_SCIP.ipynb  Qubo_1y6r_Pyomo-CPLIX.ipynb
