[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdock"
dynamic = ["version"]
description = "QDock: Encoding pose sampling in molecular docking for quantum computers via QUBO models using Grid Point Matching and Feature Atom Matching."
readme = "README.md"
authors = [
    {name = "Allaudin Ansari", email = "allu456654ansari@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Quantum Computing",
]
requires-python = ">=3.9"
dependencies = [
    "pyqubo==1.5.0",
    "prody>=2.4.0",
    "numpy<2",
    "scipy>=1.10",
    "dwave-neal",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=1.0",
]

[project.urls]
#Homepage = "https://github.com/yourusername/qdock"
Repository = "https://github.com/allu0786ansari/QC_PROJECT.git"
#"Bug Tracker" = "https://github.com/yourusername/qdock/issues"
#"Article" = "https://doi.org/10.1021/acs.jctc.3c00943"

[tool.hatch.version]
path = "src/QDock/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/QDock", "src/QDock/feature_atom_matching", "src/QDock/grid_point_mapping"]
